Fix spacing on header

--- a/src/style.css
+++ b/src/style.css
@@ -116,6 +116,10 @@ a   {
 .item7 { grid-area: aboutme;}
 .item8 { grid-area: consultation;}
 
+.grid-outer {
+    width: 100%;
+}
+
 .grid-container1 {
     display: grid;
     grid-template-areas:
@@ -123,7 +127,6 @@ a   {
         'logo home abouthypnotherapy aboutme consultation';
     grid-gap: 5px;
     grid-template-columns: auto 15% 15% 15% 15%;
-    width: 100%;
     margin-bottom: 5px;
  }
 
@@ -335,7 +338,7 @@ ul {
         'contact ph'
         'home abouthypnotherapy'
         'aboutme consultation';
-    padding: 10px 20px 5px 10px;
+    padding: 10px 15px 5px 10px;
 }
        
 .item2 {/*-media queries-*/
